# tetris

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  tetris.c
src/: CMakeLists.txt  brick.c  formation.c  game.c  grid.c  libtetris.c  libtetris.h  playerinput.c  text.c
tests/: CMakeLists.txt  formation_collision.test.c  grid_collect.test.c  grid_write_read_delete.test.c  testlib.test.c
